scalable-starbucks-v1.0.3/spring-cashier/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-cashier
  namespace: default
  labels:
    name: spring-cashier
spec:
  containers:
    - image: paulnguyen/spring-cashier:v1.0
      name: spring-cashier
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
