scalable-starbucks-v1.0.3/spring-cashier/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cashier-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: spring-cashier
